<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShadowDuel</string>
    <string name="title">Shadow Duel</string>
    <string name="action_settings">Settings</string>
	<string name="play">Gioca</string>
	<string name="deck">Mazzo</string>
	<string name="catalogue">Collezione</string>
	<string name="exit">Esci</string>
	<string name="returns">Indietro</string>
	<string name="login">Login</string>
	<string name="username">username</string>
	<string name="password">password</string>
	<string name="email">email</string>
	<string name="passwordre">re-enter password</string>
	<string name="att">att</string>
	<string name="dif">dif</string>
	<string name="attword">Attacco</string>
	<string name="difword">Difesa</string>

				
	
</resources>
