<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:background="@drawable/sfondomain_nobutton"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"	
    android:gravity="center_horizontal">

    <Button
    android:layout_marginTop="50dp"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
    android:id="@+id/buttonStartGame"
        android:background="@drawable/gioca"
         />
<Button
 android:id="@+id/buttonExit"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:text="@string/exit"/>

<Button
 android:id="@+id/buttonDeck"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:text="@string/deck"/>

<Button
 android:id="@+id/buttonCatalogue"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:text="@string/catalogue"/>



    
</LinearLayout>

