<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    

    android:id="@+id/container"
    android:background="@drawable/sfondomain_nobutton"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"	
    android:gravity="center_horizontal">

                <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:maxLines="1"
                android:singleLine="true" />
    
    
                <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
 
    <Button
    android:id="@+id/buttonLogin"
    android:layout_marginBottom="30dp"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
    android:text="@string/login"
         />
    
    
</LinearLayout>
