<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


   
    android:background="@drawable/sfondo2"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
<View
    android:id="@+id/holderlogin2"
        android:background="@drawable/title"
    
    android:orientation="vertical" 
    android:gravity="center_horizontal"
    android:alpha="0.94"
    android:layout_height="100dp"
        android:layout_width="fill_parent"
    
    android:layout_marginTop="10dp"
    />
                <EditText
                android:id="@+id/usernamer"
                android:textStyle="italic"
                android:layout_marginTop="60dp"
                android:hint="@string/username"
                android:maxLines="1"
                android:singleLine="true"
				android:layout_width="250dp"
                android:layout_height="40dp"  
                android:background="#ffffff"       
					/>


                <EditText
                android:textStyle="italic"
                android:id="@+id/passwordr"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:background="#ffffff" />
                  
                                <EditText
                android:textStyle="italic"
                android:id="@+id/passwordr2"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:hint="@string/passwordre"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:background="#ffffff" />
                
                <EditText
                android:textStyle="italic"
                android:id="@+id/emailr"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:hint="@string/email"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/email"
                android:imeOptions="actionUnspecified"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" 
                android:background="#ffffff"/>

    <Button
    android:id="@+id/buttonRegister"
    android:layout_marginBottom="30dp"
	android:layout_width="wrap_content"
	android:layout_marginTop="20dp"
	android:layout_height="40dp"
   android:background="@drawable/registrati"
         />


</LinearLayout>

